# jfconsole

./: .gitignore  Cargo.toml  chrgr.json  f4 history.txt  f4lab.json  f7 cmd history.txt  f7 history.txt  f7lab.json  f7plat.json  history.txt  jf.json  makefile  plat.json  platf4.json  platf7.json  platf7netmf.json  proj.json  test-charger.json  win-chrgr.json  win-free-plat.json  win2-chrgr.json  win3-chrgr.json  win3-plat.json  winplat.json  winplat3.json
f4lab/: f4 cmd history.txt
f7lab/: f7 cmd history.txt
platf4/: f4 cmd history.txt
platf7/: f7 cmd history.txt
platf7netmf/: f7 cmd history.txt
src/: buf_iter.rs  byte_process_thread.rs  console_logger.rs  console_threads.rs  custom_config.rs  file_logger_thread.rs  jflib.rs  lib.rs  line_printer.rs  main.rs  main_thread.rs  read_config.rs  serial_console_thread.rs  serial_port_thread.rs  sync_flag.rs  user_console_thread.rs  user_io.rs
src/config/: custom_config.rs  mod.rs  read_config.rs
src/threads/: file_logger_thread.rs  main_thread.rs  mod.rs  serial_console_thread.rs  user_console_thread.rs
src/utils/: line_printer.rs  mod.rs  ring_buf_queue.rs  user_io.rs
win-chrgr/: f4 cmd history.txt  f7 cmd history.txt
win-free-plat/: f4 cmd history.txt  f7 cmd history.txt
win2-chrg/: f7 cmd history.txt
win2-chrgr/: f7 cmd history.txt
win3-plat/: f4 cmd history.txt  f7 cmd history.txt
winplat/: f4 cmd history.txt  f7 cmd history.txt
