[package]
name = "jfconsole"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
if_chain = "1.0.2"
ringbuf = "0.2.8"
rustyline = "9.1.2"
serde_json = "1.0.82"
serialport = "4.2.0"
thread-priority = "0.8.2"

[dependencies.serde]
features = ["derive"]
version = "1.0.138"
